--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
   "dependencies": {
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
+    "@react-three/postprocessing": "^3.0.4",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "embla-carousel-react": "^8.6.0",
     "next": "16.1.1",
+    "postprocessing": "^6.38.2",
     "react": "19.2.3",
     "react-datepicker": "^9.1.0",
     "react-dom": "19.2.3",
-    "three": "^0.182.0",
-    "sharp": "^0.33.4"
+    "sharp": "^0.33.4",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
